--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,6 @@ jobs:
 
       - name: Install & Build Frontend
         run: |
-          cd frontend
           npm install
           npm run build
 
@@ -30,7 +29,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "frontend/build/*"
+          source: "build/*"
           target: "/home/ubuntu/frontend-build"
 
       - name: Deploy & Restart Apache
